--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -52,7 +52,10 @@
 \mainmatter 
 \pagestyle{headings}
 \input{introduction}
+
 %body files go here using \input{file} where file is file.tex
+\input{previous-work}
+
 \input{conclusion}
 %\theendnotes
 
