--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -1,8 +1,8 @@
 \thispagestyle{empty}
 \section*{Acknowledgements}
-Thank you to the number 42.
+Coming soon.
 \begin{flushright}
-\textbf{R.J.H} %Your initals
+\textbf{C.P.} %Your initals
 \end{flushright}
 
 
