--- a/thesis/preface.tex
+++ b/thesis/preface.tex
@@ -1,3 +1,3 @@
 \thispagestyle{empty}
 \section*{Preface}
-The Sirius Cybernetics Corporation is "a bunch of mindless jerks who'll be the first against the wall when the revolution comes." An edition of the Encyclopaedia Galactica that had the good fortune to fall through a time warp from a thousand years in the future defined the Sirius Cybernetics Corporation as "a bunch of mindless jerks who were the first against the wall when the revolution came." Note: We would welcome applications from anyone interested in taking over the post of robotics correspondent. 
+Coming soon.
