--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,1 +1,58 @@
 %add bibtex entries here
+
+@article{oxygenicPhotosynthesis,
+	Abstract = {Photosystem II (PSII) uses light energy to split water into chemi-cal products that power the planet. The stripped protons contribute to a membrane electrochemical potential before combining with die stripped electrons to make chemical bonds and releasing O2 for power-ing respiratory metabolisms. In this review, we provide an overview of the kinetics and thermodynamics of water oxidation that highlights the conserved performance of PSIIs across species. We discuss recent ad-vances in our understanding of the site of water oxidation based upon the improved (1.9-Å resolution) atomic structure of the Mn4CaO5 water-oxidizing complex (WOC) within cyanobacterial PSII. We combine these insights with recent knowledge gained from studies of the bio-genesis and assembly of the WOC (called photoassembly) to arrive at a proposed chemical mechanism for water oxidation. [ABSTRACT FROM AUTHOR]},
+	Author = {Vinyard, David J. and Ananyev, Gennady M. and Dismukes, G. Charles},
+	ISSN = {00664154},
+	Journal = {Annual Review of Biochemistry},
+	Keywords = {PHOTOSYSTEMS (Photosynthesis), LIGHT, WATER, PROTONS, CHEMICAL bonds, ELECTRON transport in plants, oxygen evolution, period-four oscillations, photoassembly, photoprotection, proton-coupled electron transport, water oxidation kinetics, water oxidation thermodynamics},
+	Pages = {577 - 606},
+	Title = {Photosystem II: The Reaction Center of Oxygenic Photosynthesis.},
+	Volume = {82},
+	URL = {http://proxy.library.brocku.ca/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=89473480&site=eds-live&scope=site},
+	Year = {2013},
+}
+
+@article{newville2004fundamentals,
+	title={Fundamentals of XAFS},
+	author={Newville, Matthew},
+	journal={Consortium for Advanced Radiation Sources, University of Chicago (USA)[http://xafs. org]},
+	year={2004}
+}
+
+@electronic{ifeffit,
+	title={IFEFFIT: Interactive XAFS Analysis},
+	url={http://cars9.uchicago.edu/ifeffit/Ifeffit},
+	author={The University of Chicago},
+	note={Accessed: 2014-04-01}
+}
+
+@electronic{namd,
+	title={NAMD - Scalable Molecular Dynamics},
+	url={http://www.ks.uiuc.edu/Research/namd/},
+	author={Theoretical and Computational Biophysics Group},
+	note={Accessed: 2014-04-01}
+}
+
+@electronic{namdEnergy,
+	title={NAMD Energy Plugin},
+	url={http://www.ks.uiuc.edu/Research/vmd/plugins/namdenergy/},
+	author={Theoretical and Computational Biophysics Group},
+	note={Accessed: 2014-04-01}
+}
+
+% unused
+
+@article{00033078510000920140101,
+	Abstract = {We propose a model for the water-oxidation and recovery systems of the oxygen-evolving complex (OEC) of the photosystem II (PSII) enzyme. The whole system is constructed from two catalytic cycles, conducted as a tandem reaction: (i) a water-oxidation loop uses cerium(IV) ammonium nitrate as an oxidant to activate a dimanganese complex for water-oxidation and thereby liberate a molecule of O-2 and (ii) a recovery loop begins with photoinhibition of the dimanganese complex but then uses O-2 to reactivate the manganese centre. The net result is a catalytic water-oxidation catalyst that can use self-generated O-2 for recovery.},
+	Author = {Yatabe, T and Kikkawa, M and Matsumoto, T and Nakai, H and Kaneko, K and Ogo, S},
+	ISSN = {14779226},
+	Journal = {DALTON TRANSACTIONS},
+	Keywords = {CHEMISTRY, INORGANIC & NUCLEAR},
+	Number = {8},
+	Pages = {3063 - 3071},
+	Title = {A model for the water-oxidation and recovery systems of the oxygen-evolving complex.},
+	Volume = {43},
+	URL = {http://proxy.library.brocku.ca/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=edswsc&AN=000330785100009&site=eds-live&scope=site},
+	Year = {2014},
+}
