--- a/thesis/previous-work.tex
+++ b/thesis/previous-work.tex
@@ -1,3 +1,7 @@
-\chapter{Previous Work}
+\chapter{Previous Research}
 
-This is my smaple text.
+Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain what research has already been done in this field.
+
+\section{Molecular Dynamics}
+
+\section{Monte Carlo}
