--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -41,6 +41,28 @@
 	note={Accessed: 2014-04-01}
 }
 
+@article{sproviero2008model,
+	title={A model of the oxygen-evolving center of photosystem II predicted by structural refinement based on EXAFS simulations},
+	author={Sproviero, Eduardo M and Gasc{\'o}n, Jos{\'e} A and McEvoy, James P and Brudvig, Gary W and Batista, Victor S},
+	journal={Journal of the American Chemical Society},
+	volume={130},
+	number={21},
+	pages={6728--6730},
+	year={2008},
+	publisher={ACS Publications}
+}
+
+@article{luber2011s1,
+	title={S1-state model of the O2-evolving complex of photosystem II},
+	author={Luber, Sandra and Rivalta, Ivan and Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo and Brudvig, Gary W and Batista, Victor S},
+	journal={Biochemistry},
+	volume={50},
+	number={29},
+	pages={6308--6311},
+	year={2011},
+	publisher={ACS Publications}
+}
+
 % unused
 
 @article{00033078510000920140101,
