lots of new things

--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -63,6 +63,43 @@
 	publisher={ACS Publications}
 }
 
+% GA
+
+@book{holland1975adaptation,
+  title={Adaptation in natural and artificial systems: An introductory analysis with applications to biology, control, and artificial intelligence.},
+  author={Holland, John H},
+  year={1975},
+  publisher={U Michigan Press}
+}
+
+@mastersthesis{comte2010bioinspired,
+  title={Bio-Inspired Optimization \& Sampling Technique for Side-chain Packing in MCCE},
+  author={Comte, Pascal},
+  school={Brock University},
+  year={2010},
+  type={Mastersthesis}
+}
+
+% RGA
+
+@inproceedings{hughes2013recentering,
+  title={Recentering, reanchoring \& restarting an evolutionary algorithm},
+  author={Hughes, James and Houghten, Sheridan and Ashlock, Daniel},
+  booktitle={Nature and Biologically Inspired Computing (NaBIC), 2013 World Congress on},
+  pages={76--83},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{hughes2013edit,
+  title={Edit metric decoding: Representation strikes back},
+  author={Hughes, James and Brown, Joseph Alexander and Houghten, Sheridan and Ashlock, Daniel},
+  booktitle={Evolutionary Computation (CEC), 2013 IEEE Congress on},
+  pages={229--236},
+  year={2013},
+  organization={IEEE}
+}
+
 % unused
 
 @article{00033078510000920140101,
