--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -14,6 +14,9 @@
 \usepackage{graphicx, subfigure}
 \usepackage{ulem}
 \usepackage{pgfplots}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\usepackage{graphicx}
 %feel free to add here
 
 \usepackage[top=1.0in, bottom=1.0in, left=1.5in, right=1.0in]{geometry} %set page margins
@@ -59,6 +62,7 @@
 %body files go here using \input{file} where file is file.tex
 \input{previous-work}
 
+\input{background}
 % \input{conclusion}
 %\theendnotes
 
